--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.15",
     "nuqs": "^2.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
